[gd_scene load_steps=2 format=3 uid="uid://crhkgngfnxf4y"]

[ext_resource type="Script" path="res://src/LobbyMenu/LobbyMenu.gd" id="1_cvwum"]

[node name="LobbyMenu" type="HBoxContainer" node_paths=PackedStringArray("start_button")]
editor_description = "UI-36"
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvwum")
start_button = NodePath("GameStartPanel/VBoxContainer/StartButton")

[node name="GameSelectPanel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameSelectPanel"]
layout_mode = 2

[node name="GameSelectList" type="ItemList" parent="GameSelectPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
item_count = 2
item_0/text = "1836"
item_1/text = "1863"

[node name="Spacer" type="Control" parent="GameSelectPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="GameSelectPanel/VBoxContainer"]
editor_description = "UI-37"
layout_mode = 2
text = "GAMELOBBY_BACK"

[node name="Spacer2" type="Control" parent="GameSelectPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.75
mouse_filter = 2

[node name="GameStartPanel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameStartPanel"]
layout_mode = 2

[node name="Spacer" type="Control" parent="GameStartPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SelectedCountryNameLabel" type="Label" parent="GameStartPanel/VBoxContainer"]
layout_mode = 2
text = "France"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="GameStartPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="GameStartPanel/VBoxContainer"]
editor_description = "UI-43"
layout_mode = 2
disabled = true
text = "GAMELOBBY_START"

[node name="Spacer3" type="Control" parent="GameStartPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2

[connection signal="save_game_selected" from="." to="." method="_on_save_game_selected"]
[connection signal="item_selected" from="GameSelectPanel/VBoxContainer/GameSelectList" to="." method="_on_game_select_list_item_selected"]
[connection signal="button_down" from="GameSelectPanel/VBoxContainer/BackButton" to="." method="_on_back_button_button_down"]
[connection signal="button_down" from="GameStartPanel/VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
